@@ -1,6 +1,0 @@
-# Copyright (c) 2024 Yuki Kimoto
-# MIT License
-
-class Net::SSLeay::Callback::Pem_password_cb : interface_t {
-  required method : int ($buf : string, $size : int, $rwflag : int, $u : object);
-}
