@@ -2,6 +2,7 @@
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
     * Add Net::SSLeay::DH class.
+    * Add Net::SSLeay::PEM#read_bio_DHparams method.
 0.009 2024-11-08
   [Requirement Changes]
     * Require SPVM 0.990029.
